site: switch prism for highlight.js

--- a/site/src/css/website.css
+++ b/site/src/css/website.css
@@ -611,3 +611,15 @@ select,
 .iti-playground pre {
   display: block;
 }
+
+/* Highlight.js overrides */
+@media (prefers-color-scheme: light), (prefers-color-scheme: no-preference) {
+  .hljs {
+    background-color: #f6f8fa; /* match GitHub */
+  }
+}
+@media (prefers-color-scheme: dark) {
+  .hljs {
+    background-color: #151b23; /* match GitHub */
+  }
+}
