--- a/site/src/examples/examples_page_template.html.ejs
+++ b/site/src/examples/examples_page_template.html.ejs
@@ -10,6 +10,10 @@
     <% if (typeof omit_iti_styles === 'undefined') { %>
       <%= iti_styles %>
     <% } %>
+
+    <link rel="stylesheet" href="/css/highlight-github-light.min.css" media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)">
+    <link rel="stylesheet" href="/css/highlight-github-dark.min.css" media="(prefers-color-scheme: dark)">
+
     <% if (typeof stylesheet_before_demo_css !== 'undefined') { %>
       <link rel="stylesheet" href="<%= stylesheet_before_demo_css %>?<%= cacheBust(stylesheet_before_demo_css) %>">
     <% } %>
@@ -17,8 +21,6 @@
     <% if (typeof stylesheet_after_demo_css !== 'undefined') { %>
       <link rel="stylesheet" href="<%= stylesheet_after_demo_css %>?<%= cacheBust(stylesheet_after_demo_css) %>">
     <% } %>
-    <link rel="stylesheet" href="/css/prism.css">
-    <link rel="stylesheet" href="/css/prism-overrides.css?<%= cacheBust('/css/prism-overrides.css') %>">
 
     <%= analytics %>
   </head>
