--- a/site/src/playground/playground_template.html.ejs
+++ b/site/src/playground/playground_template.html.ejs
@@ -10,10 +10,12 @@
     />
     <%= bootstrap_styles %>
     <%= iti_styles %>
+
+    <link rel="stylesheet" href="/css/highlight-github-light.min.css" media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)">
+    <link rel="stylesheet" href="/css/highlight-github-dark.min.css" media="(prefers-color-scheme: dark)">
+
     <link rel="stylesheet" href="/css/website.css?<%= cacheBust('/css/website.css') %>" />
 
-    <link rel="stylesheet" href="/css/prism.css">
-    <link rel="stylesheet" href="/css/prism-overrides.css?<%= cacheBust('/css/prism-overrides.css') %>">
     <%= analytics %>
   </head>
 
@@ -23,6 +25,7 @@
     <%= iti_script %>
     <script src="/playground/playground.js?<%= cacheBust('/playground/playground.js') %>"></script>
     <%= iti_live_results_script %>
-    <script src="/js/prism.js"></script>
+    <script src="/js/highlight.min.js"></script>
+    <script>hljs.highlightAll();</script>
   </body>
 </html>
