--- a/site/src/layout_template.html.ejs
+++ b/site/src/layout_template.html.ejs
@@ -156,7 +156,7 @@
             </span>
           </button>
           <ul
-            class="iti-mobile-submenu collapse nav flex-column flex-nowrap nav-pills ms-3 mt-2 <% if (pageType === 'docs') { %>show<% } %>"
+            class="iti-mobile-submenu collapse nav flex-column flex-nowrap nav-pills ms-4 mb-3 mt-2 <% if (pageType === 'docs') { %>show<% } %>"
             id="itiMobileDocsMenu"
             data-bs-parent="#itiMobilePrimaryNav"
           >
@@ -219,7 +219,7 @@
             </span>
           </button>
           <ul
-            class="iti-mobile-submenu collapse nav flex-column flex-nowrap nav-pills ms-3 mt-2 <% if (pageType === 'examples') { %>show<% } %>"
+            class="iti-mobile-submenu collapse nav flex-column flex-nowrap nav-pills ms-4 mb-3 mt-2 <% if (pageType === 'examples') { %>show<% } %>"
             id="itiMobileExamplesMenu"
             data-bs-parent="#itiMobilePrimaryNav"
           >
