site: fix html code blocks on example pages

--- a/site/src/examples/examples_content_template.html.ejs
+++ b/site/src/examples/examples_content_template.html.ejs
@@ -25,7 +25,7 @@
 <% if (typeof hideMarkupSection === 'undefined') { %>
 <div class="section">
   <h2>Markup</h2>
-  <pre><code class="language-markup"><%- markup %></code></pre>
+  <pre><code class="language-html"><%- markup %></code></pre>
 </div>
 <% } %>
 
