--- a/site/src/playground/playground_template.html.ejs
+++ b/site/src/playground/playground_template.html.ejs
@@ -23,7 +23,7 @@
     <%= layout %>
     <%= bootstrap_script %>
     <%= iti_script %>
-    <script src="/playground/playground.js?<%= cacheBust('/playground/playground.js') %>"></script>
+    <script src="/js/playground.js?<%= cacheBust('/js/playground.js') %>"></script>
     <%= iti_live_results_script %>
     <script src="/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
