site: nav: top level links, to solve problems with dropdowns jumping

--- a/site/src/layout_template.html.ejs
+++ b/site/src/layout_template.html.ejs
@@ -43,10 +43,7 @@
           <li class="nav-item dropdown col-6 col-lg-auto">
             <a
               class="nav-link dropdown-toggle d-inline-flex align-items-center gap-1 py-2 px-0 px-lg-2 iti-navlink-no-shift <% if (pageType === 'docs') { %>active<% } %>"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
+              href="/docs"
             >
               <span data-text="Docs">Docs</span>
             </a>
@@ -67,10 +64,7 @@
           <li class="nav-item dropdown col-6 col-lg-auto">
             <a
               class="nav-link dropdown-toggle d-inline-flex align-items-center gap-1 py-2 px-0 px-lg-2 iti-navlink-no-shift <% if (pageType === 'examples') { %>active<% } %>"
-              href="#"
-              role="button"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
+              href="/examples"
             >
               <span data-text="Examples">Examples</span>
             </a>
