--- a/site/src/docs/docs_page_template.html.ejs
+++ b/site/src/docs/docs_page_template.html.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/highlight-github-light.min.css" media="(prefers-color-scheme: light), (prefers-color-scheme: no-preference)">
     <link rel="stylesheet" href="/css/highlight-github-dark.min.css" media="(prefers-color-scheme: dark)">
 
-    <link rel="stylesheet" href="/css/website.css?<%= cacheBust('/css/website.css') %>" />
+    <link rel="stylesheet" href="<%= cacheBust('/css/website.css') %>" />
 
     <%= analytics %>
   </head>
