--- a/site/src/examples/js/lookup_country.js.ejs
+++ b/site/src/examples/js/lookup_country.js.ejs
@@ -7,5 +7,5 @@ window.intlTelInput(input, {
       .then(data => success(data.country_code))
       .catch(() => failure());
   },
-  loadUtils: () => import("/intl-tel-input/js/utils.js?<%= cacheBust('/intl-tel-input/js/utils.js') %>") // for formatting/placeholders etc
+  loadUtils: () => import("<%= cacheBust('/intl-tel-input/js/utils.js') %>") // for formatting/placeholders etc
 });
