--- a/site/src/examples/js/vue_component.vue.ejs
+++ b/site/src/examples/js/vue_component.vue.ejs
@@ -7,7 +7,7 @@
   <IntlTelInput
     :options="{
       initialCountry: 'us',
-      loadUtils: () => import('/intl-tel-input/js/utils.js?<%= cacheBust('/intl-tel-input/js/utils.js') %>'),
+      loadUtils: () => import('<%= cacheBust('/intl-tel-input/js/utils.js') %>'),
     }"
   />
 </template>
