--- a/site/src/examples/js/vue_component_display_code.vue.ejs
+++ b/site/src/examples/js/vue_component_display_code.vue.ejs
@@ -10,7 +10,7 @@
     @changeErrorCode="errorCode = $event"
     :options="{
       initialCountry: 'us',
-      loadUtils: () => import('/intl-tel-input/js/utils.js?<%= cacheBust('/intl-tel-input/js/utils.js') %>'),
+      loadUtils: () => import('<%= cacheBust('/intl-tel-input/js/utils.js') %>'),
     }"
   />
 </template>
