--- a/site/src/shared/iti_live_results_script.html.ejs
+++ b/site/src/shared/iti_live_results_script.html.ejs
@@ -1,1 +1,1 @@
-<script src="/js/iti-live-results.js?<%= cacheBust('/js/iti-live-results.js') %>"></script>
+<script src="<%= cacheBust('/js/iti-live-results.js') %>"></script>
