--- a/site/src/shared/iti_styles.html.ejs
+++ b/site/src/shared/iti_styles.html.ejs
@@ -1,4 +1,4 @@
 <link
   rel="stylesheet"
-  href="/intl-tel-input/css/intlTelInput.css?<%= cacheBust('/intl-tel-input/css/intlTelInput.css') %>"
+  href="<%= cacheBust('/intl-tel-input/css/intlTelInput.css') %>"
 />
