Add check icon to right of selected dropdown item
For this to work, I had to move the dial code inside the country name span, so it always appears just at the end of the text, even if the name is really long and wraps. previously, for long wrapping names, the dial code would appear far over on the RHS.

--- a/site/src/css/website.css
+++ b/site/src/css/website.css
@@ -491,6 +491,7 @@ select,
 .section--homepage-demo .iti,
 .section--homepage-demo input[type=tel] {
   width: 100%;
+  text-align: left; /* required because we have text-align:center on this section */
 }
 /* to match the other sections, which have a <p> at the bottom with this margin */
 .section--homepage-demo .btn-primary {
