site: fix examples, which were importing stale plugin

--- a/site/src/examples/js/internationalisation.js.ejs
+++ b/site/src/examples/js/internationalisation.js.ejs
@@ -1,5 +1,5 @@
-import intlTelInput from "intl-tel-input";
-import { ru } from "intl-tel-input/i18n"; // Russian
+import intlTelInput from "../../../build/intl-tel-input/js/intlTelInput";
+import { ru } from "../../../build/intl-tel-input/js/i18n"; // Russian
 
 const input = document.querySelector("#phone");
 
