--- a/site/src/examples/js/react_component.js.ejs
+++ b/site/src/examples/js/react_component.js.ejs
@@ -1,6 +1,6 @@
 import React from 'react';
 import { createRoot } from 'react-dom/client';
-import IntlTelInput from 'intl-tel-input/react';
+import IntlTelInput from '../../../build/intl-tel-input/react/IntlTelInput';
 
 const App = () => (
   <IntlTelInput
