--- a/site/src/examples/js/right_to_left.js.ejs
+++ b/site/src/examples/js/right_to_left.js.ejs
@@ -1,5 +1,5 @@
-import intlTelInput from "intl-tel-input";
-import ar from "intl-tel-input/i18n/ar"; // arabic
+import intlTelInput from "../../../build/intl-tel-input/js/intlTelInput";
+import ar from "../../../build/intl-tel-input/js/i18n/ar"; // arabic
 
 const input = document.querySelector("#phone");
 
