--- a/site/src/examples/js/react_component_display_code.js.ejs
+++ b/site/src/examples/js/react_component_display_code.js.ejs
@@ -1,4 +1,4 @@
-import IntlTelInput from 'intl-tel-input/react';
+import IntlTelInput from "intl-tel-input/react";
 
 <IntlTelInput
   initialValue={value}
