--- a/site/src/css/website.css
+++ b/site/src/css/website.css
@@ -97,7 +97,8 @@ p img {
 #bdNavbar .nav-link.active {
   font-weight: 700;
 }
-.nav-link--github {
+.nav-link--github,
+.cookie-prefs-header {
   height: 100%; /* required for vertical alignment */
 }
 
@@ -436,6 +437,11 @@ select,
   background-color: rgb(var(--header-bg-color-rgb) / 0.3);
   font-style: italic;
   text-align: left;
+}
+
+/* hide SilkTide cookie icon, and implement our own in the menu */
+#silktide-cookie-icon {
+  display: none !important;
 }
 
 
